--- a/music-app/music-app Localizations/en.lproj/Localizable.strings
+++ b/music-app/music-app Localizations/en.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "menuActions.shareSong" = "Share song";
 "menuActions.shareLink" = "Share link";
 "menuActions.removePlaylistFromLibrary" = "Remove playlist from library";
+"menuActions.showAlbum" = "Show album";
 
 // Menu Actions Share Link Section
 "menuActions.shareLink.shareSong" = "Listen %@ by %@\n%@";
@@ -45,9 +46,6 @@
 "controller.addPlaylist.addTracks" = "Add tracks";
 "controller.addPlaylist.title" = "New playlist";
 
-// Controller Search Section
-"controller.search.searchBarPlaceholder" = "Type song, artist, album...";
-
 // Controller Search SegmentedControl Section
 "controller.search.segmentedControl.tracks" = "Tracks";
 "controller.search.segmentedControl.artists" = "Artists";
@@ -58,16 +56,11 @@
 
 // Controller Library Playlists Section
 "controller.library.playlists.addPlaylist" = "Add playlist";
-"controller.library.playlists.searchBarPlaceholder" = "Type playlist name...";
 
-// Controller Library Artists Section
-"controller.library.artists.searchBarPlaceholder" = "Type artist name...";
-
-// Controller Library Albums Section
-"controller.library.albums.searchBarPlaceholder" = "Type album name...";
-
-// Controller Library Songs Section
-"controller.library.songs.searchBarPlaceholder" = "Type song name...";
+// Controller Album Section
+// Controller Album AlbumInfoCell Section
+"controller.album.albumInfoCell.playButton" = "Play";
+"controller.album.albumInfoCell.shuffleButton" = "Shuffle";
 
 // SearchBarPlaceholder Section
 "searchBarPlaceholder.tracks" = "Type track name...";
