--- a/music-app/music-app/Localization/uk.lproj/Localizable.strings
+++ b/music-app/music-app/Localization/uk.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 "library.artists" = "Виконавці";
 
 /*  */
-"library.downloaded" = "Завантажене";
+"library.download" = "Завантажене";
 
 /*  */
 "library.playlists" = "Плейлісти";
