--- a/music-app/music-app/Localization/be.lproj/Localizable.strings
+++ b/music-app/music-app/Localization/be.lproj/Localizable.strings
@@ -66,7 +66,7 @@
 "library.artists" = "Спевакі";
 
 /*  */
-"library.downloaded" = "Загрузкі";
+"library.download" = "Загрузкі";
 
 /*  */
 "library.playlists" = "Плэйлісты";
@@ -76,6 +76,9 @@
 
 /*  */
 "menuActions.addToLibrary" = "Дадаць у бібліятэку";
+
+/*  */
+"menuActions.deleteDownload" = "";
 
 /*  */
 "menuActions.removeFromLibrary" = "Выдаліць з бібліятэкі";
