Almost done work with playlists

--- a/music-app/music-app/Localization/be.lproj/Localizable.strings
+++ b/music-app/music-app/Localization/be.lproj/Localizable.strings
@@ -99,6 +99,9 @@
 "menuActions.showAlbum" = "Паказаць альбом";
 
 /*  */
+"menuActions.showArtist" = "";
+
+/*  */
 "searchBarPlaceholder.albums" = "Увядзіце назву альбома...";
 
 /*  */
